--- a/heavycenter/src/main/res/layout/frag_main_weigts.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts.xml
@@ -46,300 +46,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"/>
 
-        <RelativeLayout
-            android:layout_weight="45"
-            android:background="@color/white"
+
+        <include
+            android:id="@+id/bottom"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
-
-            <View
-                android:background="@color/color_hv_base"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"/>
-
-            <LinearLayout
-                android:elevation="2dp"
-                android:orientation="vertical"
-                android:background="@drawable/bg_hv_sharp5_white_solid"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-                <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp">
-                    <TextView
-                        android:id="@+id/tv_content"
-                        android:layout_marginLeft="15dp"
-                        android:textSize="@dimen/hv_dimen_text"
-                        android:textColor="@color/color_grey_500"
-                        android:text="系统自动识别当前驾驶员去送货"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <View
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"/>
-                    <TextView
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:gravity="center"
-                        android:paddingLeft="12dp"
-                        android:paddingRight="12dp"
-                        android:background="@drawable/bg_hv_sharp2_yell_solid"
-                        android:layout_marginRight="10dp"
-                        android:textSize="@dimen/hv_dimen_text_title"
-                        android:textColor="@color/white"
-                        android:text="重新选择"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <RelativeLayout
-                            android:layout_gravity="center_vertical"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content">
-
-                        <com.siweisoft.heavycenter.module.view.circle.CircleBar
-                                android:id="@+id/circlebar"
-                                android:layout_centerInParent="true"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-
-                    </RelativeLayout>
-
-                    <LinearLayout
-                        android:layout_marginLeft="20dp"
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <LinearLayout
-                            android:gravity="center_vertical"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <TextView
-                                android:id="@+id/tv_goodname"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/hv_dimen_text_title_aaaa"
-                                android:text="2333"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-
-                            <TextView
-                                android:id="@+id/tv_spes"
-                                android:layout_marginLeft="20dp"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/hv_dimen_text_title_aaaa"
-                                android:text="2333"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-                        </LinearLayout>
-                        <LinearLayout
-                                android:layout_marginTop="5dp"
-                            android:gravity="center_vertical"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <TextView
-                                android:id="@+id/tv_type"
-                                android:background="@drawable/bg_hv_sharp2_yell_solid"
-                                android:textColor="@color/white"
-                                android:textSize="15sp"
-                                android:text="发往"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-
-                            <TextView
-                                android:id="@+id/tv_comp"
-                                android:layout_marginLeft="20dp"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/hv_dimen_text_aaa"
-                                android:text="上海绿地"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-
-                    <ImageView
-                        android:layout_marginTop="5dp"
-                        android:src="@drawable/icon_hv_cancle"
-                        android:layout_width="23dp"
-                        android:layout_height="23dp" />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="预估发货净重"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="收货净重"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="10t"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="13t"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:paddingLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="预估发货毛重"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="收货毛重"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="10t"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="10t"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:gravity="right|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="01/15 10:10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text"
-                            android:text="01/15 10:10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:gravity="center_horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                    <com.siweisoft.heavycenter.module.view.text.BgTextView
-                        android:layout_centerInParent="true"
-                        android:id="@+id/tv_save"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-
-                        android:paddingBottom="5dp"
-                        android:paddingLeft="70dp"
-                        android:paddingRight="70dp"
-                        android:paddingTop="5dp"
-                        android:singleLine="true"
-                        android:text="保存"
-                        android:textSize="21sp"
-                        android:visibility="visible"
-
-                        style_common:boo_one="true"
-                        style_common:color_one="@color/color_hv_yelll"
-                        style_common:color_stroke="@color/red"
-                        style_common:color_stroke_two="@color/color_red_500"
-                        style_common:color_two="@color/color_red_500"
-                        style_common:color_txt="@color/white"
-                        style_common:color_txt_two="@color/white"
-                        style_common:corner="5dp"
-                        style_common:corner_two="5dp"
-                        style_common:stroke="0dp"
-                        style_common:stroke_two="2dp" />
-                </RelativeLayout>
-            </LinearLayout>
-        </RelativeLayout>
+            android:layout_height="0dp"
+            android:layout_weight="45"
+            layout="@layout/frag_main_weigts_bottom"/>
     </LinearLayout>
 
 
