--- a/heavycenter/src/main/res/layout/frag_mana_store.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+   >
     <data>
         <variable
             name="frag_mana_store"
@@ -25,6 +26,8 @@
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            style_common:srlEnableOverScrollBounce="false"
+            style_common:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
