--- a/heavycenter/src/main/res/layout/frag_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_begin.xml
@@ -14,6 +14,7 @@
         >
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            app:srlEnableLoadmoreWhenContentNotFull="false"
             app:srlEnableOverScrollBounce="false"
             app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
