--- a/heavycenter/src/main/res/layout/frag_main_order_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_detail.xml
@@ -10,7 +10,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/color_grey_200"
         android:clickable="true"
         >
 
@@ -106,6 +106,7 @@
 
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:layout_marginTop="10dp"
             android:clickable="true"
             android:id="@+id/item_tip"
             app:layout_constraintTop_toBottomOf="@+id/ll_fuction"
@@ -117,6 +118,7 @@
             android:layout_height="wrap_content"/>
 
         <ImageView
+            android:layout_marginTop="3dp"
           app:layout_constraintTop_toTopOf="@+id/item_tip"
             app:layout_constraintRight_toRightOf="parent"
             android:padding="5dp"
