--- a/heavycenter/src/main/res/layout/frag_main_store.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_store"
@@ -13,14 +13,16 @@
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
-            style_common:txt_mid ="仓库"
-            style_common:iv_left ="@drawable/icon_hv_person"
-            style_common:iv_right = "@drawable/icon_hv_scan"
-            style_common:iv_right2 = "@drawable/icon_hv_panku"
+            app:txt_mid ="仓库"
+            app:iv_left ="@drawable/icon_hv_person"
+            app:iv_right = "@drawable/icon_hv_scan"
+            app:iv_right2 = "@drawable/icon_hv_panku"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            app:srlEnableOverScrollBounce="false"
+            app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
