--- a/heavycenter/src/main/res/layout/item_main_store.xml
+++ b/heavycenter/src/main/res/layout/item_main_store.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -7,85 +7,76 @@
                 type="com.siweisoft.heavycenter.data.netd.mana.store.list.StoreDetail" />
     </data>
 
-
-    <RelativeLayout
-            android:background="@drawable/bg_hv_sel_dark_light"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-    >
-    <LinearLayout
-            android:transitionName="storedetail"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/swipe"
-            android:layout_margin="@dimen/dimen_recylce_item_margin"
-            android:padding="@dimen/dimen_recylce_item_padding"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-
-    >
-        <LinearLayout
-                android:gravity="bottom"
-                android:layout_marginTop="@dimen/dimen_recylce_item_inner_margin"
-                android:layout_marginBottom="@dimen/dimen_recylce_item_inner_margin"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <TextView
-                    android:includeFontPadding="false"
-                    android:gravity="bottom"
-                    android:singleLine="true"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-                    android:text="@{item_main_store.warehouseName}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            <TextView
-                    android:includeFontPadding="false"
-                    android:gravity="bottom"
-                    android:singleLine="true"
-                    android:layout_marginLeft="14dp"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                    android:text="@{item_main_store.productName}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            <TextView
-                    android:includeFontPadding="false"
-                    android:gravity="bottom"
-                    android:singleLine="true"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                    android:text="@{item_main_store.specifications}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            <View
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"/>
+<android.support.constraint.ConstraintLayout
+    android:background="@drawable/bg_hv_sel_dark_light"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="@dimen/dimen_recylce_item_padding"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 
-            <TextView
-                    android:includeFontPadding="false"
-                    android:gravity="bottom"
-                    android:id="@+id/tv_current"
-                    android:singleLine="true"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/color_recylce_item_content_txtcolor"
-                    android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-        </LinearLayout>
-        <com.siweisoft.heavycenter.module.view.progress.ProgressView
-                android:id="@+id/pv_progress"
-                android:layout_marginBottom="@dimen/dimen_recylce_item_margin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_housename"
+        android:layout_marginTop="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        android:includeFontPadding="false"
+        android:gravity="bottom"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+        android:text="@{item_main_store.warehouseName}"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        app:layout_constraintBottom_toBottomOf="@+id/tv_housename"
+        app:layout_constraintLeft_toRightOf="@+id/tv_housename"
+        android:id="@+id/tv_productName"
+        android:includeFontPadding="false"
+        android:gravity="bottom"
+        android:singleLine="true"
+        android:layout_marginLeft="14dp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:text="@{item_main_store.productName}"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        app:layout_constraintBottom_toBottomOf="@+id/tv_housename"
+        app:layout_constraintLeft_toRightOf="@+id/tv_productName"
+        android:includeFontPadding="false"
+        android:gravity="bottom"
+        android:singleLine="true"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:text="@{item_main_store.specifications}"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_housename"
+        android:includeFontPadding="false"
+        android:gravity="bottom"
+        android:id="@+id/tv_current"
+        android:singleLine="true"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/color_recylce_item_content_txtcolor"
+        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.siweisoft.heavycenter.module.view.progress.ProgressView
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_housename"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/pv_progress"
+        android:layout_marginBottom="@dimen/dimen_recylce_item_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</android.support.constraint.ConstraintLayout>
 </layout>
