--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -8,10 +8,10 @@
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="210dp"
         android:background="@color/color_base"
-        android:layout_height="190dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -21,82 +21,96 @@
             android:src="@drawable/icon_hv_myce_bg"
             style_common:layout_constraintBottom_toBottomOf="parent"
             style_common:layout_constraintEnd_toEndOf="parent"
-            style_common:layout_constraintHorizontal_bias="0.0"
             style_common:layout_constraintStart_toStartOf="parent"
-            style_common:layout_constraintTop_toTopOf="parent"
-            style_common:layout_constraintVertical_bias="0.0" />
+            style_common:layout_constraintTop_toTopOf="parent" />
 
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             style_common:color_bg="@color/transparent"
             style_common:iv_right="@drawable/icon_hv_myce_code"
             style_common:iv_right2="@color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toTopOf="parent" />
+
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            style_common:layout_constraintGuide_begin="132dp" />
+
+
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/iv_head"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginStart="34dp"
-            android:layout_marginTop="61dp"
+            android:layout_marginLeft="15dp"
             android:src="@drawable/icon_hv_myce_head"
             android:transitionName="cirlceimageview"
             app:civ_border_color="#11ffffff"
             app:civ_border_width="5dp"
-            style_common:layout_constraintStart_toStartOf="parent"
-            style_common:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             style_common:srcCompat="@drawable/bg_cricle_yel" />
 
+
         <TextView
+            android:layout_marginLeft="10dp"
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="72dp"
             android:ellipsize="marquee"
             android:singleLine="true"
             android:text="18721654587"
             android:textColor="@color/white"
             android:textSize="25sp"
-            style_common:layout_constraintStart_toEndOf="@+id/iv_head"
-            style_common:layout_constraintTop_toTopOf="parent" />
+            style_common:layout_constraintBottom_toTopOf="@+id/tv_role"
+            style_common:layout_constraintLeft_toRightOf="@+id/iv_head"
+            />
 
         <TextView
+            style_common:layout_constraintBottom_toTopOf="@+id/guideline3"
+            style_common:layout_constraintLeft_toRightOf="@+id/iv_head"
             android:id="@+id/tv_role"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="10dp"
             android:singleLine="true"
             android:text="管理员"
             android:textColor="@color/white"
             android:textSize="14sp"
-            style_common:layout_constraintStart_toEndOf="@+id/iv_head"
-            style_common:layout_constraintTop_toBottomOf="@+id/tv_name" />
+         />
 
         <TextView
+            android:layout_marginTop="10dp"
             android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="8dp"
             android:singleLine="true"
             android:text="18741414141"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            style_common:layout_constraintStart_toEndOf="@+id/iv_head"
-            style_common:layout_constraintTop_toBottomOf="@+id/tv_role" />
+            android:textColor="@color/color_grey_400"
+            android:textSize="19sp"
+            style_common:layout_constraintTop_toBottomOf="@+id/tv_role"
+            style_common:layout_constraintLeft_toRightOf="@+id/iv_head" />
 
         <ImageView
+            android:visibility="gone"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
             android:id="@+id/iv_nameedit"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="80dp"
-            android:src="@drawable/icon_hv_myce_edit"
-            style_common:layout_constraintEnd_toEndOf="parent"
-            style_common:layout_constraintTop_toTopOf="parent" />
+            android:background="@drawable/icon_hv_myce_edit"
+            style_common:layout_constraintRight_toRightOf="parent"
+            style_common:layout_constraintTop_toBottomOf="@+id/tv_name"
+/>
+
 
 
     </android.support.constraint.ConstraintLayout>
